--- a/src/.env.example
+++ b/src/.env.example
@@ -68,3 +68,9 @@ VITE_APP_NAME="${APP_NAME}"
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI="${APP_URL}/funil/google-calendar/callback"
+
+# WhatsApp Business API (Meta Cloud API)
+WHATSAPP_ENABLED=false
+WHATSAPP_API_URL="https://graph.facebook.com/v18.0"
+WHATSAPP_TOKEN=
+WHATSAPP_PHONE_NUMBER_ID=
