--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,7 +20,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
-          extensions: sqlite, pdo_sqlite
+          extensions: sqlite, pdo_sqlite, sodium
 
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist
