--- a/.github/workflows/ci-debug.yml
+++ b/.github/workflows/ci-debug.yml
@@ -19,7 +19,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
-          extensions: sqlite, pdo_sqlite, sodium
+          extensions: sqlite, pdo_sqlite
 
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist
