--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist
-        working-directory: src
+        working-directory: ./src
 
       - name: Prepare .env
         run: |
@@ -32,12 +32,12 @@ jobs:
           php -r "file_exists('.env') || copy('.env.example','.env');"
           echo "DB_CONNECTION=sqlite" >> .env
           echo "DB_DATABASE=:memory:" >> .env
-        working-directory: src
+        working-directory: ./src
 
       - name: Run migrations
         run: php artisan migrate --force --env=testing
-        working-directory: src
+        working-directory: ./src
 
       - name: Run tests
         run: composer test --no-interaction
-        working-directory: src
+        working-directory: ./src
