--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -24,20 +24,18 @@ jobs:
 
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist
-        working-directory: ./src
+        working-directory: src
 
       - name: Prepare .env
         run: |
-          cp .env.example .env || true
-          php -r "file_exists('.env') || copy('.env.example','.env');"
-          echo "DB_CONNECTION=sqlite" >> .env
-          echo "DB_DATABASE=:memory:" >> .env
-        working-directory: ./src
+          cp src/.env.example src/.env || true
+          php -r "file_exists('src/.env') || copy('src/.env.example','src/.env');"
+          echo "DB_CONNECTION=sqlite" >> src/.env
+          echo "DB_DATABASE=:memory:" >> src/.env
 
       - name: Run migrations
-        run: php artisan migrate --force --env=testing
-        working-directory: ./src
+        run: php src/artisan migrate --force --env=testing
 
       - name: Run tests
         run: composer test --no-interaction
-        working-directory: ./src
+        working-directory: src
